/* ---------------------------------------------------- */
/*  Generated by Enterprise Architect Version 17.0 		*/
/*  Created On : 08-Apr-2026 7:26:05 PM 				*/
/*  DBMS       : MySql 						*/
/* ---------------------------------------------------- */

SET FOREIGN_KEY_CHECKS=0
;
/* Drop Tables */

DROP TABLE IF EXISTS `addresses` CASCADE
;

DROP TABLE IF EXISTS `categories` CASCADE
;

DROP TABLE IF EXISTS `customers` CASCADE
;

DROP TABLE IF EXISTS `groups` CASCADE
;

DROP TABLE IF EXISTS `images` CASCADE
;

DROP TABLE IF EXISTS `items` CASCADE
;

DROP TABLE IF EXISTS `job_details` CASCADE
;

DROP TABLE IF EXISTS `jobs` CASCADE
;

DROP TABLE IF EXISTS `orders` CASCADE
;

DROP TABLE IF EXISTS `prices` CASCADE
;

DROP TABLE IF EXISTS `products` CASCADE
;

DROP TABLE IF EXISTS `promotions` CASCADE
;

DROP TABLE IF EXISTS `suppliers` CASCADE
;

DROP TABLE IF EXISTS `type_variations` CASCADE
;

DROP TABLE IF EXISTS `variation_promotions` CASCADE
;

DROP TABLE IF EXISTS `variations` CASCADE
;

/* Create Tables */

CREATE TABLE `addresses`
(
	`address_id` INT NOT NULL AUTO_INCREMENT,
	`first_name` VARCHAR(50) NULL,
	`last_name` VARCHAR(50) NULL,
	`company_name` VARCHAR(50) NULL,
	`phone` VARCHAR(50) NULL,
	`email` VARCHAR(50) NULL,
	`street_address_1` VARCHAR(50) NULL,
	`street_address_2` VARCHAR(50) NULL,
	`town_city` VARCHAR(50) NULL,
	`country` VARCHAR(50) NULL,
	`postcode` VARCHAR(50) NULL,
	`customer_id` INT NULL,
	CONSTRAINT `PK_addresses` PRIMARY KEY (`address_id` ASC)
)

;

CREATE TABLE `categories`
(
	`category_id` INT NOT NULL AUTO_INCREMENT,
	`name` VARCHAR(150) NULL,
	`approved` BOOL NULL,
	CONSTRAINT `PK_categories` PRIMARY KEY (`category_id` ASC)
)

;

CREATE TABLE `customers`
(
	`customer_id` INT NOT NULL AUTO_INCREMENT,
	`name` VARCHAR(50) NULL,
	`email` VARCHAR(50) NULL,
	`password_hash` TEXT NULL,
	`notes` VARCHAR(50) NULL,
	`group` VARCHAR(50) NULL,
	CONSTRAINT `PK_customers` PRIMARY KEY (`customer_id` ASC)
)

;

CREATE TABLE `groups`
(
	`group_id` INT NOT NULL AUTO_INCREMENT,
	`name` VARCHAR(200) NULL,
	`approved` BOOL NULL DEFAULT 0,
	`category_id` INT NULL,
	CONSTRAINT `PK_groups` PRIMARY KEY (`group_id` ASC)
)

;

CREATE TABLE `images`
(
	`image_id` INT NOT NULL AUTO_INCREMENT,
	`link` TEXT NULL,
	`updated` INT NULL,
	`variation_id` INT NULL,
	CONSTRAINT `PK_images` PRIMARY KEY (`image_id` ASC)
)

;

CREATE TABLE `items`
(
	`item_id` INT NOT NULL AUTO_INCREMENT,
	`name` VARCHAR(50) NULL,
	`description` VARCHAR(50) NULL,
	`variation_id` INT NULL,
	CONSTRAINT `PK_items` PRIMARY KEY (`item_id` ASC)
)

;

CREATE TABLE `job_details`
(
	`job_id` INT NOT NULL,
	`variation_id` INT NOT NULL,
	`name` VARCHAR(50) NULL,
	`image` VARCHAR(50) NULL,
	`price` VARCHAR(50) NULL,
	`quantity` VARCHAR(50) NULL,
	CONSTRAINT `PK_job_details` PRIMARY KEY (`job_id` ASC, `variation_id` ASC)
)

;

CREATE TABLE `jobs`
(
	`job_id` INT NOT NULL AUTO_INCREMENT,
	`status` VARCHAR(50) NULL,
	`created_at` DATETIME NULL,
	`notes` TEXT NULL,
	`quantity` INT NULL,
	`price_per_unit` FLOAT(10,2) NULL,
	`subtotal` FLOAT(10,2) NULL,
	`pdf_artwork_link` TEXT NULL,
	`id_order` INT NULL,
	`order_id` INT NULL,
	CONSTRAINT `PK_jobs` PRIMARY KEY (`job_id` ASC)
)

;

CREATE TABLE `orders`
(
	`order_id` INT NOT NULL AUTO_INCREMENT,
	`status` VARCHAR(50) NULL,
	`created_at` VARCHAR(50) NULL,
	`currency` VARCHAR(50) NULL,
	`subtotal` VARCHAR(50) NULL,
	`shipping_total` VARCHAR(50) NULL,
	`customer_id` INT NULL,
	CONSTRAINT `PK_orders` PRIMARY KEY (`order_id` ASC)
)

;

CREATE TABLE `prices`
(
	`price_id` INT NOT NULL AUTO_INCREMENT,
	`min_quantity` INT NULL,
	`max_quantity` INT NULL,
	`price` FLOAT(8,2) NULL,
	`variation_id` INT NULL,
	CONSTRAINT `PK_prices` PRIMARY KEY (`price_id` ASC)
)

;

CREATE TABLE `products`
(
	`product_id` INT NOT NULL AUTO_INCREMENT,
	`SKU` VARCHAR(50) NULL,
	`name` VARCHAR(150) NULL,
	`description` TEXT NULL,
	`descriptive_tagline` TEXT NULL,
	`status` VARCHAR(50) NULL,
	`date_status` TIME NULL,
	`is_approved` BOOL NOT NULL DEFAULT 0,
	`supplier_id` INT NULL,
	`group_id` INT NULL,
	CONSTRAINT `PK_products` PRIMARY KEY (`product_id` ASC)
)

;

CREATE TABLE `promotions`
(
	`promotion_id` INT NOT NULL AUTO_INCREMENT,
	`name` VARCHAR(250) NULL,
	`discount_type` VARCHAR(50) NULL,
	`discount_value` FLOAT(10,2) NULL,
	`start_at` DATETIME NULL,
	`end_at` DATETIME NULL,
	CONSTRAINT `PK_promotions` PRIMARY KEY (`promotion_id` ASC)
)

;

CREATE TABLE `suppliers`
(
	`supplier_id` INT NOT NULL AUTO_INCREMENT,
	`contact_name` VARCHAR(50) NULL,
	`email` VARCHAR(50) NULL,
	`phone` VARCHAR(50) NULL,
	`company_name` VARCHAR(50) NULL,
	`country` VARCHAR(50) NULL,
	`city` VARCHAR(50) NULL,
	`address_line1` VARCHAR(50) NULL,
	`address_line2` VARCHAR(50) NULL,
	`postal_code` VARCHAR(50) NULL,
	`password` TEXT NULL,
	CONSTRAINT `PK_Suppliers` PRIMARY KEY (`supplier_id` ASC)
)

;

CREATE TABLE `type_variations`
(
	`type_id` INT NOT NULL AUTO_INCREMENT,
	`type_name` VARCHAR(100) NULL,
	`description` MEDIUMTEXT NULL,
	`category_id` INT NULL,
	CONSTRAINT `PK_type_variations` PRIMARY KEY (`type_id` ASC)
)

;

CREATE TABLE `variation_promotions`
(
	`variation_id` INT NOT NULL,
	`promotion_id` INT NOT NULL,
	CONSTRAINT `PK_Table1` PRIMARY KEY (`variation_id` ASC, `promotion_id` ASC)
)

;

CREATE TABLE `variations`
(
	`variation_id` INT NOT NULL AUTO_INCREMENT,
	`name` VARCHAR(150) NULL,
	`SKU` VARCHAR(100) NULL,
	`image` TEXT NULL,
	`pdf_artwork` TEXT NULL,
	`name_pdf_artwork` TEXT NULL,
	`price_display_mode` VARCHAR(50) NULL,
	`parent_id` INT NULL,
	`product_id` INT NULL,
	`type_id` INT NULL,
	CONSTRAINT `PK_variations` PRIMARY KEY (`variation_id` ASC)
)
COMMENT = 'a'

;

/* Create Primary Keys, Indexes, Uniques, Checks */

ALTER TABLE `addresses`
 ADD INDEX `IXFK_addresses_customers` (`customer_id` ASC)
;

ALTER TABLE `groups`
 ADD INDEX `IXFK_groups_categories` (`category_id` ASC)
;

ALTER TABLE `images`
 ADD INDEX `IXFK_images_variations` (`variation_id` ASC)
;

ALTER TABLE `items`
 ADD INDEX `IXFK_items_variations` (`variation_id` ASC)
;

ALTER TABLE `job_details`
 ADD INDEX `IXFK_job_details_jobs` (`job_id` ASC)
;

ALTER TABLE `job_details`
 ADD INDEX `IXFK_job_details_variations` (`variation_id` ASC)
;

ALTER TABLE `jobs`
 ADD INDEX `IXFK_jobs_orders` (`order_id` ASC)
;

ALTER TABLE `jobs`
 ADD INDEX `IXFK_jobs_orders_02` (`order_id` ASC)
;

ALTER TABLE `orders`
 ADD INDEX `IXFK_orders_customers` (`customer_id` ASC)
;

ALTER TABLE `prices`
 ADD INDEX `IXFK_prices_variations` (`variation_id` ASC)
;

ALTER TABLE `products`
 ADD INDEX `IXFK_products_groups` (`group_id` ASC)
;

ALTER TABLE `products`
 ADD INDEX `IXFK_products_suppliers` (`supplier_id` ASC)
;

ALTER TABLE `type_variations`
 ADD INDEX `IXFK_type_variations_categories` (`category_id` ASC)
;

ALTER TABLE `variation_promotions`
 ADD INDEX `IXFK_variation_promotions_promotions` (`promotion_id` ASC)
;

ALTER TABLE `variation_promotions`
 ADD INDEX `IXFK_variation_promotions_variations` (`variation_id` ASC)
;

ALTER TABLE `variations`
 ADD INDEX `IXFK_variations_products` (`product_id` ASC)
;

ALTER TABLE `variations`
 ADD INDEX `IXFK_variations_type_variations` (`type_id` ASC)
;

ALTER TABLE `variations`
 ADD INDEX `IXFK_variations_variations` (`parent_id` ASC)
;

/* Create Foreign Key Constraints */

ALTER TABLE `addresses`
 ADD CONSTRAINT `FK_addresses_customers`
	FOREIGN KEY (`customer_id`) REFERENCES `customers` (`customer_id`) ON DELETE Restrict ON UPDATE Restrict
;

ALTER TABLE `groups`
 ADD CONSTRAINT `FK_groups_categories`
	FOREIGN KEY (`category_id`) REFERENCES `categories` (`category_id`) ON DELETE Restrict ON UPDATE Restrict
;

ALTER TABLE `images`
 ADD CONSTRAINT `FK_images_variations`
	FOREIGN KEY (`variation_id`) REFERENCES `variations` (`variation_id`) ON DELETE Restrict ON UPDATE Restrict
;

ALTER TABLE `items`
 ADD CONSTRAINT `FK_items_variations`
	FOREIGN KEY (`variation_id`) REFERENCES `variations` (`variation_id`) ON DELETE Restrict ON UPDATE Restrict
;

ALTER TABLE `job_details`
 ADD CONSTRAINT `FK_job_details_jobs`
	FOREIGN KEY (`job_id`) REFERENCES `jobs` (`job_id`) ON DELETE Restrict ON UPDATE Restrict
;

ALTER TABLE `job_details`
 ADD CONSTRAINT `FK_job_details_variations`
	FOREIGN KEY (`variation_id`) REFERENCES `variations` (`variation_id`) ON DELETE Restrict ON UPDATE Restrict
;

ALTER TABLE `jobs`
 ADD CONSTRAINT `FK_jobs_orders_02`
	FOREIGN KEY (`order_id`) REFERENCES `orders` (`order_id`) ON DELETE Restrict ON UPDATE Restrict
;

ALTER TABLE `orders`
 ADD CONSTRAINT `FK_orders_customers`
	FOREIGN KEY (`customer_id`) REFERENCES `customers` (`customer_id`) ON DELETE Restrict ON UPDATE Restrict
;

ALTER TABLE `prices`
 ADD CONSTRAINT `FK_prices_variations`
	FOREIGN KEY (`variation_id`) REFERENCES `variations` (`variation_id`) ON DELETE Restrict ON UPDATE Restrict
;

ALTER TABLE `products`
 ADD CONSTRAINT `FK_products_groups`
	FOREIGN KEY (`group_id`) REFERENCES `groups` (`group_id`) ON DELETE Restrict ON UPDATE Restrict
;

ALTER TABLE `products`
 ADD CONSTRAINT `FK_products_suppliers`
	FOREIGN KEY (`supplier_id`) REFERENCES `suppliers` (`supplier_id`) ON DELETE Restrict ON UPDATE Restrict
;

ALTER TABLE `type_variations`
 ADD CONSTRAINT `FK_type_variations_categories`
	FOREIGN KEY (`category_id`) REFERENCES `categories` (`category_id`) ON DELETE Restrict ON UPDATE Restrict
;

ALTER TABLE `variation_promotions`
 ADD CONSTRAINT `FK_variation_promotions_promotions`
	FOREIGN KEY (`promotion_id`) REFERENCES `promotions` (`promotion_id`) ON DELETE Restrict ON UPDATE Restrict
;

ALTER TABLE `variation_promotions`
 ADD CONSTRAINT `FK_variation_promotions_variations`
	FOREIGN KEY (`variation_id`) REFERENCES `variations` (`variation_id`) ON DELETE Restrict ON UPDATE Restrict
;

ALTER TABLE `variations`
 ADD CONSTRAINT `FK_variations_products`
	FOREIGN KEY (`product_id`) REFERENCES `products` (`product_id`) ON DELETE Restrict ON UPDATE Restrict
;

ALTER TABLE `variations`
 ADD CONSTRAINT `FK_variations_type_variations`
	FOREIGN KEY (`type_id`) REFERENCES `type_variations` (`type_id`) ON DELETE Restrict ON UPDATE Restrict
;

ALTER TABLE `variations`
 ADD CONSTRAINT `FK_variations_variations`
	FOREIGN KEY (`parent_id`) REFERENCES `variations` (`variation_id`) ON DELETE Restrict ON UPDATE Restrict
;

SET FOREIGN_KEY_CHECKS=1
;
