@startuml dot63_entidad_relacion
title DOT63 - Diagrama entidad-relación

hide methods
hide stereotypes
skinparam shadowing false
skinparam linetype ortho

entity customers {
  * customer_id : INT <<PK>>
  --
  name : VARCHAR(50)
  email : VARCHAR(50)
  password_hash : TEXT
  notes : VARCHAR(50)
  group : VARCHAR(50)
}

entity addresses {
  * address_id : INT <<PK>>
  --
  first_name : VARCHAR(50)
  last_name : VARCHAR(50)
  company_name : VARCHAR(50)
  phone : VARCHAR(50)
  email : VARCHAR(50)
  street_address_1 : VARCHAR(50)
  street_address_2 : VARCHAR(50)
  town_city : VARCHAR(50)
  country : VARCHAR(50)
  postcode : VARCHAR(50)
  customer_id : INT <<FK>>
}

entity suppliers {
  * supplier_id : INT <<PK>>
  --
  contact_name : VARCHAR(50)
  email : VARCHAR(50)
  phone : VARCHAR(50)
  company_name : VARCHAR(50)
  country : VARCHAR(50)
  city : VARCHAR(50)
  address_line1 : VARCHAR(50)
  address_line2 : VARCHAR(50)
  postal_code : VARCHAR(50)
  password : TEXT
}

entity categories {
  * category_id : INT <<PK>>
  --
  name : VARCHAR(150)
  approved : BOOL
}

entity groups {
  * group_id : INT <<PK>>
  --
  name : VARCHAR(200)
  approved : BOOL
  category_id : INT <<FK>>
}

entity products {
  * product_id : INT <<PK>>
  --
  SKU : VARCHAR(50)
  name : VARCHAR(150)
  description : TEXT
  descriptive_tagline : TEXT
  status : VARCHAR(50)
  date_status : TIME
  is_approved : BOOL
  supplier_id : INT <<FK>>
  group_id : INT <<FK>>
}

entity type_variations {
  * type_id : INT <<PK>>
  --
  type_name : VARCHAR(100)
  description : MEDIUMTEXT
  category_id : INT <<FK>>
}

entity variations {
  * variation_id : INT <<PK>>
  --
  name : VARCHAR(150)
  SKU : VARCHAR(100)
  image : TEXT
  pdf_artwork : TEXT
  name_pdf_artwork : TEXT
  price_display_mode : VARCHAR(50)
  parent_id : INT <<FK>>
  product_id : INT <<FK>>
  type_id : INT <<FK>>
}

entity images {
  * image_id : INT <<PK>>
  --
  link : TEXT
  updated : INT
  variation_id : INT <<FK>>
}

entity items {
  * item_id : INT <<PK>>
  --
  name : VARCHAR(50)
  description : VARCHAR(50)
  variation_id : INT <<FK>>
}

entity prices {
  * price_id : INT <<PK>>
  --
  min_quantity : INT
  max_quantity : INT
  price : FLOAT(8,2)
  variation_id : INT <<FK>>
}

entity promotions {
  * promotion_id : INT <<PK>>
  --
  name : VARCHAR(250)
  discount_type : VARCHAR(50)
  discount_value : FLOAT(10,2)
  start_at : DATETIME
  end_at : DATETIME
}

entity variation_promotions {
  * variation_id : INT <<PK, FK>>
  * promotion_id : INT <<PK, FK>>
}

entity orders {
  * order_id : INT <<PK>>
  --
  status : VARCHAR(50)
  created_at : VARCHAR(50)
  currency : VARCHAR(50)
  subtotal : VARCHAR(50)
  shipping_total : VARCHAR(50)
  customer_id : INT <<FK>>
}

entity jobs {
  * job_id : INT <<PK>>
  --
  status : VARCHAR(50)
  created_at : DATETIME
  notes : TEXT
  quantity : INT
  price_per_unit : FLOAT(10,2)
  subtotal : FLOAT(10,2)
  pdf_artwork_link : TEXT
  id_order : INT
  order_id : INT <<FK>>
}

entity job_details {
  * job_id : INT <<PK, FK>>
  * variation_id : INT <<PK, FK>>
  --
  name : VARCHAR(50)
  image : VARCHAR(50)
  price : VARCHAR(50)
  quantity : VARCHAR(50)
}

customers ||--o{ addresses : tiene
customers |o--o{ orders : realiza
categories ||--o{ groups : clasifica
categories ||--o{ type_variations : define
suppliers ||--o{ products : ofrece
groups |o--o{ products : agrupa
products ||--o{ variations : contiene
type_variations |o--o{ variations : tipifica
variations |o--o{ variations : padre
variations ||--o{ images : muestra
variations ||--o{ items : incluye
variations ||--o{ prices : tarifica
variations ||--o{ variation_promotions : recibe
promotions ||--o{ variation_promotions : aplica
orders |o--o{ jobs : contiene
jobs ||--o{ job_details : detalla
variations ||--o{ job_details : seleccionada

legend bottom
  PK = clave primaria
  FK = clave foránea
  Las relaciones opcionales reflejan columnas FK anulables del esquema SQL.
endlegend

@enduml
